# adui-tools-pc

./: .editorconfig  .env.development  .env.production  LICENSE  README.md  README_EN.md  commitlint.config.ts  env.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/db/: migrate.rs  mod.rs  pool.rs
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  lib.rs
src-tauri/src/commands/: baidu_translate.rs  conversations.rs  github.rs  http.rs  mod.rs  settings.rs
src-tauri/src/db/: migrate.rs  mod.rs
src-tauri/src/migrations/: 0001_init.sql
src-tauri/src/settings/: crypto.rs  mod.rs  types.rs
src/app/: App.vue  main.ts
src/app/bootstrap/: register.ts
src/app/layout/: AppShell.vue
src/app/layout/components/: LayoutContent.vue  LayoutFooter.vue  LayoutHeader.vue  LayoutSider.vue  ToolsBar.vue
src/app/pages/: AboutMe.vue
src/app/pages/components/: GitHubCommitHeatmap.vue
src/app/router/: index.ts
src/app/styles/: global.css  normalize.css
src/assets/fonts/: jetbrains-mono.css
src/common/components/: AdBlock.vue  AdTextarea.vue  CodeEditor.vue  ui-discrete.ts
src/common/lib/monaco/: monaco-environment.ts
src/common/types/: common.types.ts
src/components/: SvgIcon.vue
src/core/toolkit/: tool.registry.ts  tool.runtime.ts  tool.types.ts
src/settings/: GlobalSettings.vue  routes.ts  settings.types.ts
src/settings/components/: ApiKeysForm.vue  NetworkForm.vue
src/tools/: tools.routes.ts
src/tools/json/: index.ts  routes.ts
src/tools/json/pages/: JsonEditor.vue  JsonParsing.vue  JsonToDart.vue  JsonToSql.vue
src/tools/translate/: index.ts  routes.ts  translate.types.ts
src/tools/translate/components/: BaiDuDocument.vue  BaiDuImage.vue  BaiDuText.vue
src/tools/translate/pages/: BaiDu.vue  YouDao.vue
src/tools/translate/types/: language.types.ts  translate.types.ts
src/types/: components.d.ts
src/ui/: Ad-Block.vue  AdTextarea.vue  AppProviders.vue
src/utils/: tauri.ts
src/workers/: timerWorker.ts
vite/: index.ts
vite/plugins/: auto-import.ts  components.ts  html.ts  svg-icons.ts  unocss.ts  vue.ts
