[package]
name = "ADuiTools"
version = "0.0.1"
description = "ADui Tools PC - Tauri + Vue + Vite + NaiveUI"
authors = ["ADui"]
license = "MIT"
repository = "git+ssh://git@github.com/ADuiStuido/adui-tools-pc.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# SQLite
rusqlite = { version = "0.38", features = ["bundled"] }
r2d2_sqlite = "0.31"
r2d2 = "0.8"

# HTTP（统一由 Rust 发起请求）
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }

thiserror = "1"
base64 = "0.22"
rand = "0.8"
aes-gcm = "0.10"

# 主密钥存系统钥匙串
tauri-plugin-keyring = "0.1.0"